# TGVerity

./: .gitignore  CMakeLists.txt  README.md
desktop/: README.md  tgverity_bridge_shim.cpp  tgverity_bridge_shim.h  tgverity_bridge_shim_tests.cpp
docs/: architecture-gaps.md  build-matrix.md  code-review-findings.md  crypto-plan.md  desktop-build.md  desktop-two-client-security-spec.md  message-lifecycle.md  platform-adapter-contract.md  roadmap.md  security-benchmark.md  testing-plan.md  threat-model.md  v0.2-design.md
patches/: tdesktop-macos-tgverity-v0.1.patch  tdesktop-tgverity-hooks-v0.2.DRAFT.patch  tdesktop-tgverity-hooks.patch
src/: main.cpp
src/app/: config.cpp  config.h
src/tg/: td_client.cpp  td_client.h
src/tgverity/: bridge.cpp  bridge.h  crypto_provider.cpp  crypto_provider.h  fake_telegram_client.cpp  fake_telegram_client.h  log.cpp  log.h  p2p_frame.cpp  p2p_frame.h  p2p_socket.cpp  p2p_socket.h  relay_packet.cpp  relay_packet.h  session_store.cpp  session_store.h  state_machine.cpp  state_machine.h  tg_client.h  tg_client_stub.cpp  tg_client_tdlib.cpp  tgverity_core.cpp  tgverity_core.h  tgverity_drift_test.cpp
tests/: app_bridge_tests.cpp  bridge_f0_tests.cpp  bridge_tests.cpp  crypto_provider_tests.cpp  log_tests.cpp  relay_packet_tests.cpp  session_store_tests.cpp  state_machine_tests.cpp
